--- a/PythonBootcamp/solutions/06_Introduction_to_Matplotlib_solutions.ipynb
+++ b/PythonBootcamp/solutions/06_Introduction_to_Matplotlib_solutions.ipynb
@@ -17,15 +17,38 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<center><h1>Introduction to Matplotlib</h1></center>\n",
     "\n",
+    "<img src=\"support_files/images/data_viz/matplotlib_logo.png\" width='600'/> \n",
+    "\n",
     "<p>\n",
-    "Python has many tools available for visualization. The most commonly used plotting tool is <b>matplotlib</b>. We will give a basic introduction here and a more in-depth tutorial on visualization later in the course.\n",
+    "    <b>matplotlib</b> is a plotting library for Python.\n",
+    "<p>\n",
+    "<h3>Pros:</h3>\n",
+    "<ul> \n",
+    "<li>Huge amount of functionality/options.\n",
+    "<li>Works with numpy arrays and python lists.\n",
+    "<li>Comes with many prepackaged Python distros (anaconda, WinPython, etc.).\n",
+    "<li>Easily saves plots to image (.png, .bmp, etc.) and vector (.svg, .pdf, etc.) formats.\n",
+    "<li>Has an excellent set of examples (with code) at the <a href=\"http://matplotlib.org/gallery\">matplotlib gallery</a>\n",
+    "<li>Shares many syntactic conventions with Matlab.\n",
+    "</ul>\n",
     "\n",
-    "Matplotlib is designed after MATLAB's plotting, which has some benefits and drawbacks.\n",
-    "    \n",
-    "This package has a lot of functionality! Check out the <a href=\"http://matplotlib.org/gallery\">matplotlib gallery</a> for examples.\n",
+    "<p>\n",
+    "<h3>Cons:</h3>\n",
+    "<ul>\n",
+    "<li>Slow for rapidly updating plots.\n",
+    "<li>3D plotting support is not great.\n",
+    "<li>Documentation is not always useful.\n",
+    "<li>Essentially has two interfaces.  One is intended to be close to Matlab, the other is object oriented.  You will find examples that assume one or the other, but rarely the one you are after.\n",
+    "<li>Shares many syntactic conventions with Matlab.\n",
+    "</ul>\n",
     "\n",
-    "For the most part, we will use arrays as the input to matplotlib and outputs will appear in the notebook or get saved to files (.png, .svg, etc.) \n",
-    "    \n",
+    "\n",
+    "<p>\n",
+    "<h3>Resources:</h3>\n",
+    "<ul>\n",
+    "<li><a href=\"https://matplotlib.org/cheatsheets/\">cheat sheets</a>\n",
+    "<li><a href=\"https://www.youtube.com/watch?v=UO98lJQ3QGI&list=PL-osiE80TeTvipOqomVEeZ1HRrcEvtZB_\">youtube tutorials</a>\n",
+    "\n",
     "</div>"
    ]
   },
@@ -795,7 +818,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
